# xmrwallet

./: .gitignore  CONTRIBUTORS.md  build_all_arch.sh  patch_monerujo.sh  prepare.sh  refresh.txt  remove_sidekick.sh
app/: CMakeLists.txt  CMakeLists.txt.backup  CMakeLists.txt.bak  CMakeLists.txt.fixed  fix_monerujo.patch  fix_monerujo.py
app/build_arm64-v8a/: CMakeCache.txt  Makefile  cmake_install.cmake
app/build_armeabi-v7a/: CMakeCache.txt  Makefile  cmake_install.cmake
app/build_test/: CMakeCache.txt  Makefile  cmake_install.cmake
app/build_x86/: CMakeCache.txt  Makefile  cmake_install.cmake
app/build_x86_64/: CMakeCache.txt  Makefile  cmake_install.cmake
app/src/main/: check_libs.sh
app/src/main/cpp/: monerujo.cpp  monerujo.cpp.backup
app/src/main/java/com/m2049r/xmrwallet/data/: UserNotes.java
app/src/main/java/com/m2049r/xmrwallet/model/: TransactionHistory.java
external-libs/: BUILD_INSTRUCTIONS.md  CHECKLIST.md  Makefile  QUICK_START.md  android32.Dockerfile  android64.Dockerfile  androidx64.Dockerfile  boost-android  build-all-architectures.sh  build-android-arm32.sh  build-android-arm64.sh  build-android-x86_64.sh  find_missing_libs.sh  fix_zmq.sh
